--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^7.1.11",
-    "electron-packager": "^14.2.0"
+    "electron": ">=7.1.11",
+    "electron-packager": ">=14.2.0"
   }
 }
